src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Applications__c</fullName>
        <label>Applications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stamping</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Metal Forming</fullName>
                </value>
                <value>
                    <fullName>Printing</fullName>
                </value>
                <value>
                    <fullName>Packaging</fullName>
                </value>
                <value>
                    <fullName>Machining</fullName>
                </value>
                <value>
                    <fullName>Web Processing</fullName>
                </value>
                <value>
                    <fullName>Robotics</fullName>
                </value>
                <value>
                    <fullName>Servo Driven Roll Feeder Upgrade</fullName>
                </value>
                <value>
                    <fullName>Material Handling</fullName>
                </value>
                <value>
                    <fullName>Gantry</fullName>
                </value>
                <value>
                    <fullName>Etc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_Type__c</fullName>
        <label>Company Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>End User</fullName>
                </value>
                <value>
                    <fullName>OEM</fullName>
                </value>
                <value>
                    <fullName>Manufacturer</fullName>
                </value>
                <value>
                    <fullName>Service Provider</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <inlineHelpText>Enter the fiscal year as MM/DD</inlineHelpText>
        <label>Fiscal Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maternal_Last_Name__c</fullName>
        <label>Maternal Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_of_Interest__c</fullName>
        <label>Product of Interest</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Indramat</fullName>
                </value>
                <value>
                    <fullName>Alum Profiles</fullName>
                </value>
                <value>
                    <fullName>Ergoprosys</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIC_List__c</fullName>
        <label>SIC List</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>100</fullName>
                </value>
                <value>
                    <fullName>200</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>1040</fullName>
                </value>
                <value>
                    <fullName>1090</fullName>
                </value>
                <value>
                    <fullName>1220</fullName>
                </value>
                <value>
                    <fullName>1221</fullName>
                </value>
                <value>
                    <fullName>1311</fullName>
                </value>
                <value>
                    <fullName>1381</fullName>
                </value>
                <value>
                    <fullName>1382</fullName>
                </value>
                <value>
                    <fullName>1389</fullName>
                </value>
                <value>
                    <fullName>1400</fullName>
                </value>
                <value>
                    <fullName>1520</fullName>
                </value>
                <value>
                    <fullName>1531</fullName>
                </value>
                <value>
                    <fullName>1540</fullName>
                </value>
                <value>
                    <fullName>1600</fullName>
                </value>
                <value>
                    <fullName>1623</fullName>
                </value>
                <value>
                    <fullName>1700</fullName>
                </value>
                <value>
                    <fullName>1731</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2024</fullName>
                </value>
                <value>
                    <fullName>2030</fullName>
                </value>
                <value>
                    <fullName>2033</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SIC__c</fullName>
        <label>SIC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Fiscal_Year_Length</fullName>
        <active>false</active>
        <errorConditionFormula>LEN( Fiscal_Year__c ) &lt; 5</errorConditionFormula>
        <errorDisplayField>Fiscal_Year__c</errorDisplayField>
        <errorMessage>Please enter the fiscal year as MM/DD. Ex: 10/31 or 01/01</errorMessage>
    </validationRules>
</CustomObject>